automatically backed up by learn

--- a/app/views/impact.erb
+++ b/app/views/impact.erb
@@ -65,7 +65,7 @@ li a {
    
    <br><br> <h2><b> National Organizations </b></h2>
   
- <b> NOMAS</b>, the National Organization for Men Against Sexism, focuses on the harmful effects of sexism on both genders and works to combat it through helping men 
+ <b> NOMAS</b>, the National Organization for Men Against Sexism, focuses on the harmful effects of sexism <br> on both genders and works to combat it through helping men 
  
     
     <br><br><br>
