automatically backed up by learn

--- a/app/views/impact.erb
+++ b/app/views/impact.erb
@@ -62,12 +62,11 @@ li a {
     <b> VOTE</b> for politicians advocating for equality of the races and sexes </b> <br> <br>
    <a href="https://everydayfeminism.com/2014/09/non-racist-white-person/?utm_content=buffer92b7c&utm_medium=social&utm_source=facebook.com&utm_campaign=buffer"> "10 Ways White People Can Step Up to Fight Everyday Racism" </a> from Everyday Feminism <br> <br><br> <br>
   
-   
-   <br><br> <h2><b> National Organizations </b></h2>
+    <h2><b> National Organizations </b></h2>
   
- <b> NOMAS</b>, the National Organization for Men Against Sexism, focuses on the harmful effects of sexism <br> on both genders and works to combat it through helping men 
+ <b> NOMAS</b>, the National Organization for Men Against Sexism, focuses on the harmful effects of sexism <br> on both genders and works to combat it through helping men. 
  
-    
+  <b> NAACP </b>, The   
     <br><br><br>
     <h1> People Making Impacts </h1>
     <b> Bryan Stevenson </b> is the creator of <a href="https://eji.org/"> Equal Justice Intiative (EJI)</a> a group dedicated opposing racial and economic injustice <br> and protecting the basic rights of minority groups in America.
