automatically backed up by learn

--- a/app/views/impact.erb
+++ b/app/views/impact.erb
@@ -66,7 +66,7 @@ li a {
   
  <b> NOMAS</b>, the National Organization for Men Against Sexism, focuses on the harmful effects of sexism <br> on both genders and works to combat it through helping men. 
  
-  <a href = https://www.naacp.org> <b> NAACP </b></a>, the National Association for the Advancement of Colored People, is a   
+  <a href = https://www.naacp.org> <b> NAACP </b></a>, the National Association for the Advancement of Colored People, founded in 1909 <br> is a   
     <br><br><br>
     <h1> People Making Impacts </h1>
     <b> Bryan Stevenson </b> is the creator of <a href="https://eji.org/"> Equal Justice Intiative (EJI)</a> a group dedicated opposing racial and economic injustice <br> and protecting the basic rights of minority groups in America.
