--- a/app/views/impact.erb
+++ b/app/views/impact.erb
@@ -69,8 +69,8 @@ li a {
  <br> <br> 
   <a href = "https://www.naacp.org"> <b> NAACP</b></a>, the National Association for the Advancement of Colored People, founded in 1909 <br> is a a group dedicated to ensuring political, social, economic, and educational equality of all people <br> and destroying racism and discrimation in America. 
     <br><br><br>
-    <b><h1> People Making Impacts </h1></b>
-    <h2> Against Racism</h2>
+    <b><h1> People Making Impacts </h1></b><br>
+    <h2> Against Racism</h2><br> <br>
     <b> Bryan Stevenson </b> is the creator of <a href="https://eji.org/"> Equal Justice Intiative (EJI)</a> a group dedicated opposing racial and economic injustice <br> and protecting the basic rights of minority groups in America.
     <div class="container" style="text-align:center"><Center>
     <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/bryan_stevenson_we_need_to_talk_about_an_injustice" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div></div></Center>
