--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -13,7 +13,7 @@ h2 {
 
 body{
     background: linear-gradient(#D8F2FE, #FED8F9, #FDFDFD, #D8F2FE); 
-    font-family: savoye LET, cursive; 
+    font-family: savoye LET, Tahoma; 
     font-size: 30px;
     text-align: center; 
 }
