automatically backed up by learn

--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -1,11 +1,11 @@
 h1 
-{font-family: cursive bold;
+{font-family: Tahoma bold;
 text-align: center;
 font-size:50; 
 }
 
 h2 {
-    font-family: savoye LET, cursive bold; 
+    font-family: savoye LET, Tahoma bold; 
     font-size: 40px; 
     text-align: left; 
     
